fix broken css

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
   justify-content: space-between;
   align-items: flex-end;
 
-  padding-top: 400px;
+  padding-top: 480px;
 }
 
 .header {
